# Web_Project

./: .env  .gitignore  Cargo.toml  PROJECT_REPORT.md  README.md  patients.db
migrations/: 01_schema_init.sql  02_system_access_logs.sql  03_support_tickets_alter.sql  04_triage_priority.sql  05_bed_management.sql
src/: main.rs  pricing.rs  utils.rs
src/db/: analytics.rs  appointments.rs  beds.rs  billing.rs  consultation.rs  medical_records.rs  mod.rs  patients.rs  security.rs  seed_test_data.rs  staff.rs  support.rs  triage.rs  users.rs
src/handlers/: admin.rs  appointments.rs  auth.rs  beds.rs  billing.rs  consultation.rs  medical_records.rs  mod.rs  patients.rs  receptionist.rs  support.rs  triage.rs
src/models/: access_log.rs  appointment.rs  billing.rs  consultation.rs  medical_record.rs  mod.rs  patient.rs  staff.rs  user.rs
src/services/: test.rs
static/: app.js  style.css
static/css/: style.css
templates/: dashboard.html  index.html  layout.html
templates/admin/: add_doctor.html  add_nurse.html  add_receptionist.html  analytics.html  dashboard.html  edit_staff.html  onboard_staff.html  security.html  staff_directory.html  support_dashboard.html
templates/appointments/: list.html
templates/auth/: forgot_password.html  forgot_password_sent.html  login.html  register.html  reset_password.html  verify_otp.html
templates/medical_records/: add.html
templates/patient/: add.html  bill_history.html  book_appointment.html  dashboard.html  edit.html  login.html  medical_history.html  my_profile.html  profile.html  register.html  update_appointment.html
templates/patients/: add.html  list.html  profile.html
templates/shared/: base.html  dashboard.html  layout.html
templates/staff/: add.html  bed_management.html  consultation.html  dashboard.html  doctor_queue.html  login.html  my_profile.html  navbar.html  patient_detail.html  patient_directory.html  patient_report.html  (+1 more)
(+28 files in other folders)
