[package]
name = "Web_Project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-identity = "0.9"
actix-files = "0.6"
tera = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal" ] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde-float"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
env_logger = "0.10"
tracing = "0.1"